--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
-title: Nighthawk-Pages
-description: "August 2023 to June 2024"
-owner_name: Tirth Thakkar
-github_username: Tirth-Thakkar
-github_repo: "Nighthawk-Pages"
-baseurl: "/Nighthawk-Pages"
+title: Political Corruption Literacy Project
+description: "Div Hacks 2024"
+owner_name: Vivian Ni
+github_username: vivianknee
+github_repo: "vivianknee"
+baseurl: "/Political-Corruption-Literacy-Project"
 remote_theme: jekyll/minima
 minima:
   social_links:
     - { platform: github, user_url: "https://github.com/nighthawkcoders"}
-    - { platform: github, user_url: "https://github.com/Tirth-Thakkar"}
+    - { platform: github, user_url: "https://github.com/vivianknee"}
     - { platform: github, user_url: "https://github.com/h4seeb-cmd"}
 # remote_theme: pages-themes/dinky@v0.2.0
 # remote_theme: pages-themes/minimal@v0.2.0
